Fixed overlaping divs bug

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
     --block-8: #444; 
     --block-bonus: #222;
 
-    --background-color: #333;
+    --background-color: #444;
 }
 
 *{
@@ -70,6 +70,10 @@ body{
     left: 50%;
     transform: translate3d(-50%,-50%,0);
     transform-origin: center;
+}
+.area-inactive{
+    top:-1000px !important;
+    left:-1000px !important;
 }
 #game-container-left{
     box-shadow: inset 0 0 0px 1px #fff4, 0 0 10px 5px #fff4;
@@ -105,7 +109,10 @@ body{
     text-align: center;
     margin-bottom: 1rem;
 }
-
+.game-info-mobile-on{
+    width:100%;
+    display: none;
+}
 .info-fade-in-out{
     animation: info-fade 400ms;
 }
@@ -437,7 +444,7 @@ body{
     display: grid;
     place-items: center; 
     text-align: center;
-    padding: 4rem;
+    /* padding: 4rem; */
     font-size: 2rem;
     animation-fill-mode: forwards;
     opacity: 1;
@@ -548,6 +555,12 @@ body{
 }
 
 @media (max-height: 768px){
+    .game-info-mobile-on{
+        display: block;
+    }
+    .game-info-mobile-off{
+        display: none;
+    }
     .container{
         width:90%;
         height:90%;
@@ -557,6 +570,12 @@ body{
     }
 }
 @media (max-width: 768px){
+    .game-info-mobile-on{
+        display: block;
+    }
+    .game-info-mobile-off{
+        display: none;
+    }
     .container{
         width:90%;
         height:90%;
